@@ -3,11 +3,14 @@ import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
+import org.jsoup.HttpStatusException;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
@@ -26,7 +29,7 @@ public class WebTree{
         this.root = new WebNode(rootPage);
 
         // Step 3: Build the web tree by fetching subpages recursively
-//        buildTree(this.root, 2); // Limit depth to prevent infinite loops
+        buildTree(this.root, 1); // Limit depth to prevent infinite loops
     }
 
     private void buildTree(WebNode currentNode, int depth) throws IOException {
@@ -35,11 +38,11 @@ public class WebTree{
         }
 
         // Fetch subpages of the current webpage
-        Set<String> subpages = getSubpages(currentNode.webPage.url);
+        Set<String> subpages = getSubpages(currentNode.webPage.url);//err
 
         // For each subpage, create a child node and recursively build its subtree
         for (String subpageUrl : subpages) {
-            WebPage subPage = new WebPage(subpageUrl, extractPageName(subpageUrl));
+            WebPage subPage = new WebPage(subpageUrl, extractPageName(subpageUrl));//err
             WebNode childNode = new WebNode(subPage);
             currentNode.addChild(childNode);
             buildTree(childNode, depth - 1); // Recursive call with decreased depth
@@ -52,27 +55,53 @@ public class WebTree{
 
         try {
             // Fetch and parse the webpage
-            Document doc = Jsoup.connect(baseUrl).get();
+            Document doc = Jsoup.connect(baseUrl)
+            		.userAgent("Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.5304.107 Safari/537.36")
+                    .referrer("https://www.google.com")
+                    .timeout(10000)
+                    .get();;
 
             // Extract all <a> tags
             Elements links = doc.select("a[href]");
 
             for (Element link : links) {
                 String href = link.attr("href");
+                String decodedHref = URLDecoder.decode(href, StandardCharsets.UTF_8.name());
+                decodedHref = decodedHref.replace("%23", "#"); // Decode fragment
 
                 // Handle relative and absolute URLs
-                String fullUrl = href.startsWith("http") ? href : new URL(new URL(baseUrl), href).toString();
+                String fullUrl;
+                if (decodedHref.startsWith("http")) {
+                    fullUrl = decodedHref;
+                } else {
+                    URI baseUri = new URI(baseUrl);
+                    fullUrl = new URI(
+                            baseUri.getScheme(),
+                            baseUri.getHost(),
+                            decodedHref.startsWith("/") ? decodedHref : "/" + decodedHref,
+                            null
+                    ).toString().replace("%23", "#").replace("%3F", "?");
+                }
+
+                // Debugging output
+//                System.out.println("href: " + decodedHref);
+//                System.out.println("host: " + new URI(baseUrl).getHost());
+//                System.out.println("full: " + fullUrl);
 
                 // Filter links to include only subpages of the given domain
-                if (fullUrl.startsWith(baseUrl)) {
+                if (fullUrl.startsWith(baseUrl) && !(decodedHref.startsWith("TEL:") || decodedHref.startsWith("/TEL:"))) {
                     subpages.add(fullUrl);
                 }
             }
+        } catch (HttpStatusException e) {
+            System.err.println("HTTP error fetching URL. Status=" + e.getStatusCode());
+
         } catch (Exception e) {
             // Handle errors gracefully, such as malformed URLs or inaccessible pages
-            System.err.println("Error fetching subpages for: " + baseUrl);
+            System.err.println("Error fetching subpages for URL.");
             e.printStackTrace();
         }
+
 
         return subpages;
     }
@@ -80,7 +109,7 @@ public class WebTree{
     // Extract a human-readable page name from a URL
     private String extractPageName(String url) {
         try {
-            return new URI(url).toURL().getPath().replace("/", "").replace("-", " ").trim();
+            return new URI(url).toURL().getPath().replace("/", "").replace("-", " ").trim();//err
         } catch (Exception e) {
         	e.printStackTrace();
             return url; // Fallback to URL if name extraction fails
